// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerMenu should render correctly 1`] = `
<Menu
  bodyClassName=""
  burgerBarClassName=""
  burgerButtonClassName=""
  className=""
  crossButtonClassName=""
  crossClassName=""
  customBurgerIcon={
    <img
      alt="Open Menu"
      className=""
      data-testid="open-menu"
      src="test-file-stub"
      srcSet="test-file-stub"
    />
  }
  customCrossIcon={
    <img
      alt="Close Menu"
      className=""
      data-testid="close-menu"
      src="test-file-stub"
      srcSet="test-file-stub"
    />
  }
  disableAutoFocus={false}
  disableCloseOnEsc={false}
  htmlClassName=""
  id=""
  itemClassName=""
  itemListClassName=""
  itemListElement="nav"
  menuClassName=""
  morphShapeClassName=""
  noOverlay={true}
  noTransition={false}
  onIconHoverChange={[Function]}
  onStateChange={[Function]}
  outerContainerId="page_wrapper"
  overlayClassName=""
  pageWrapId="contents_wrapper"
  styles={Object {}}
  width={300}
>
  <a
    className="menu-item"
    data-testid="inventory-sidebar-link"
    href="#"
    id="inventory_sidebar_link"
    onClick={[Function]}
  >
    All Items
  </a>
  <a
    className="menu-item"
    data-testid="about-sidebar-link"
    href="https://saucelabs.com/"
    id="about_sidebar_link"
  >
    About
  </a>
  <a
    className="menu-item"
    data-testid="logout-sidebar-link"
    href="#"
    id="logout_sidebar_link"
    onClick={[Function]}
  >
    Logout
  </a>
  <a
    className="menu-item"
    data-testid="reset-sidebar-link"
    href="#"
    id="reset_sidebar_link"
    onClick={[Function]}
  >
    Reset App State
  </a>
</Menu>
`;

exports[`DrawerMenu should render correctly for a visual user 1`] = `
<Menu
  bodyClassName=""
  burgerBarClassName=""
  burgerButtonClassName=""
  className=""
  crossButtonClassName=""
  crossClassName=""
  customBurgerIcon={
    <img
      alt="Open Menu"
      className="visual_failure"
      data-testid="open-menu"
      src="test-file-stub"
      srcSet="test-file-stub"
    />
  }
  customCrossIcon={
    <img
      alt="Close Menu"
      className="visual_failure"
      data-testid="close-menu"
      src="test-file-stub"
      srcSet="test-file-stub"
    />
  }
  disableAutoFocus={false}
  disableCloseOnEsc={false}
  htmlClassName=""
  id=""
  itemClassName=""
  itemListClassName=""
  itemListElement="nav"
  menuClassName=""
  morphShapeClassName=""
  noOverlay={true}
  noTransition={false}
  onIconHoverChange={[Function]}
  onStateChange={[Function]}
  outerContainerId="page_wrapper"
  overlayClassName=""
  pageWrapId="contents_wrapper"
  styles={Object {}}
  width={300}
>
  <a
    className="menu-item"
    data-testid="inventory-sidebar-link"
    href="#"
    id="inventory_sidebar_link"
    onClick={[Function]}
  >
    All Items
  </a>
  <a
    className="menu-item"
    data-testid="about-sidebar-link"
    href="https://saucelabs.com/"
    id="about_sidebar_link"
  >
    About
  </a>
  <a
    className="menu-item"
    data-testid="logout-sidebar-link"
    href="#"
    id="logout_sidebar_link"
    onClick={[Function]}
  >
    Logout
  </a>
  <a
    className="menu-item"
    data-testid="reset-sidebar-link"
    href="#"
    id="reset_sidebar_link"
    onClick={[Function]}
  >
    Reset App State
  </a>
</Menu>
`;
